# KaithemAutomation

./: .directory  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .project  .pydevproject  .pylintrc  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  ManageUsers.py  README.md  STYLE.md  TODO.md  Unnamed  Untitled1.bak~  ass  auth.py  changes.md  cla.md  console.py  default.nix  dev_run.py  direct_dependencies.txt  directories.py  eslint.config.mjs  example_custom_launcher.py  faq.md  help.md  kaithem-kioskify.sh  kaithem.py  liccheck.ini  license.md  main.py  (+31 more)
.tours/: basic.tour
Seleniumtests/: Kaithem.side  README.md
badges/: README.md  grey-rounded-template.xcf
cfg/: users.json
cfg/0/: users.json
devnotes/: README.md
doc_source/: conf.py  index.rst
docs/: changelog_development.txt
helpers/: build_md_docs.sh  doxyfile  raspi_launch.sh
helpers/debianpackaging/: build.sh  postins
imgsrc/: AutomationServer.xcf  banner.xcf  favicon.ase  logo-alt-mini.xcf  logo-alt.xcf  logo-mini.xcf  logo.xcf  scrapbookboxbgnoise.xcf  templogo.xcf
k4d/Acorns/: .directory  README.md  acornquotes.h  acorns.cpp  acorns.h  acorns_arduinobindings.cpp
k4d/Crypto/: Ed25519.cpp
k4d/KaithemForDevices/: k4d.cpp  k4d.h
k4d/pavillion_arduinolib/: README.md  fake_libsodium.cpp  fake_libsodium.h  pavillion.cpp  pavillion.h  rpcserver.cpp
k4d/tweetnacl/: tweetnacl.c  tweetnacl.h
kaithem/: .gitignore  __init__.py  __main__.py  __version__.py  buildozer.spec  cli.py  kaithem.komodoproject  kaithem.py  main.py  start_kaithem.sh
kaithem/api/: __init__.py  apps_page.py  chandler.py  devices.py  lifespan.py  midi.py  modules.py  plugin_interfaces.py  plugins.py  resource_types.py  settings.py  tags.py  users.py  util.py  web.py  widgets.py
kaithem/data/: config-schema.yaml  default_bashrc.sh  default_configuration.txt  default_configuration.yaml  defaultusersettings.yaml  quotes.yaml  words_eff.txt
kaithem/service/: main.py
kaithem/src/: .directory  .util.py.kate-swp  ManageUsers.py  ManageUsers.py.orig  alerts.py  apps_page.py  assetlib.py  astrallibwrapper.py  auth.py  breakpoint.py  btadmin.py  builtintags.py  cherrypy  cliserver.py  codechecks.py  conditions.py  config.py  console_about_page.py  context_restrictions.py  database.py  datastructures.py  devices.py  devices_interface.py  dialogs.py  directories.py  drayer.py  esphome_dash.py  events.py  geolocation.py  gis.py  gpio.py  gstwrapper.py  jackmanager.py  jackmixer.py  kaithemobj.py  kegs.py  logconfig.py  logviewer.py  mail.py  main.py  (+77 more)
kaithem/src/builtin_kegs/kaithem.builtin.lighting-generator-fx/plugins/function-eval/src/rust/function-eval/: Cargo.toml
kaithem/src/builtin_kegs/kaithem.builtin.lighting-generator-fx/plugins/function-eval/src/rust/function-eval/src/: lib.rs
kaithem/ssl/: certificate.cert
kaithem/var/: .gitignore
kaithem_cli/: cli.py
kaithem_scripts/: Makefile  makefile_runner.py  pi_boot_cfg.py
kaithem_scripts/scripts/: enable-matter.sh  install-kaithem-service.sh  install-pipewire-jack.sh  install-utilities.sh  install-zrok.sh  linux-sd-protect.sh  linux-tweaks.sh  max-volume.sh  setup-anon-mosquitto.sh  setup-kiosk-mode.sh  setup-zrok.sh  uninstall-bloatware.sh
loadedmodules/1370275187.631017/: __COMPLETE__
loadedmodules/Air%20Loom%20Core%20Functions/: %2Fairloom%2Fgasses.view  Increment%20Count  Veiw%20Count  Weekday
notes/: storage_notes.txt
pages/: console.html  error.html  index.html  index.html~  login.html  pageheader.html  pageheader.html~
pages/auth/: adduser.html  deleteuser.html  index.html  user.html
pages/errors/: alreadyexists.html  permissionerror.html~
pages/help/: about.html  about.html~  help.html  help.html~  index.html  index.html~
pages/modules/: deleteresource.html  index.html  (+3 more)
playwright/: test-aa-mixer.spec.ts  test-account-settings.spec.ts  test-basic-chandler-features.spec.ts  test-chandler-create-delete-features.spec.ts  test-chandler-cue-properties.spec.ts  test-chandler-digital-signage.spec.ts  test-chandler-group-settings.spec.ts  test-chandler-import-features.spec.ts  test-chandler-labels.spec.ts  test-chandler-logic.spec.ts  test-chandler-presets-reset-unspecified-option.spec.ts  test-chandler-presets.spec.ts  test-chandler-transitions-and-renumbering.spec.ts  test-config-entries.spec.ts  test-create-device.spec.ts  test-create-group.spec.ts  test-create-user.spec.ts  test-dashbeard.spec.ts  test-folders-and-file-resources.spec.ts  test-global-settings.spec.ts  test-help.spec.ts  test-load-library-module.spec.ts  test-logger-resource.spec.ts  test-login-bad-pw.spec.ts  test-login-logout.spec.ts  test-map-tile.spec.ts  test-mixer.spec.ts  test-module-search.spec.ts  test-module-settings.spec.ts  test-object-inspector.spec.ts  test-page-in-nested-folder.spec.ts  test-page-options.spec.ts  test-pages-events.spec.ts  test-pages_events.spec.ts  test-pj-mapper-editor.spec.ts  test-preloaded-module.spec.ts  test-profiler.spec.ts  test-raw-widgets-api.spec.ts  test-resource-metadata.spec.ts  test-static-server-resource.spec.ts  (+23 more)
screenshots/: BanderoleTheme1.avif  FugitTheme1.avif  audio-mixer-mobile.avif  audio-mixer.avif  collage.avif  cue-logic-mobile.avif  cues-list.avif  device-page.avif  module-mobile.avif  nord-theme.avif  preset-selection.avif  python-code.avif  screenshot-info.txt  steam-theme.avif
scripts/: README.md  build-builtin-kegs.sh  eslint-hook.sh  import_16x9_buttons.sh  install-kaithem-service.sh  install-kaithem.sh  install-pipewire-jack.sh  install-utilities.sh  linux-sd-protect.sh  linux-tweaks.sh  makefile_choose_interpreter.sh  mako-to-jinja.py  max-volume.sh  pipewire.conf  prepare-commit-message.sh  setup-anon-mosquitto.sh  setup-kiosk-mode.sh  uv_pinned_build.sh
snap/: snapcraft.yaml
static/: aqua.css  banderole.css  leaf.css  scrapbook.css
tests/: 1  2  3  6  7  8  badguest  beadmin  delevtpg  delmod  login  readme.txt  testsindex  trigexpr  truevt  tusrf  usrpp
wasm_kegs/: LICENSE  README.md  __init__.py  packages.py  sdk.py
(+1549 files in other folders)
