[project]
name = "kaithem"
version = "0.93.1"
requires-python = ">=3.11,<4.0"

description = "Home/Commercial SCADA-like automation system"
license = "GPL-3.0-or-later"

authors = [{ name = "Daniel Dunn" }]

readme = "README.md"


classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

dependencies = [
    # First party"
    "scullery>=0.4.0",
    "iot-devices>=0.30.1",
    "icemedia>=0.2.0",
    "NVRChannel>=0.20.0",
    # New numpy needs new opencv
    "numpy>=2.0.0",
    "extism>=1.0.4",
    "mako",
    "jinja2",
    "pam",
    "msgpack",
    "pyyaml",
    "types-PyYaml",
    "nmcli",
    "apprise",
    "ffmpeg-python",
    "yappi",
    "zeroconf>=0.119.0",
    "colorzero",
    # Still included in repo because it doesn't install correctly due to
    # suds-passworddigest
    #onvif,
    "tinytag",
    "jsonschema",
    "pint",
    "pyflakes",
    "python_mpv_jsonipc",
    "textdistance",
    "toml",
    "vignette",
    "simpleeval",
    "websockets",
    "zeep",
    "passlib",
    "Pillow",
    "markupsafe",
    "python-dateutil",
    "recurrent",
    "pygments",
    "pytz",
    "ntplib",
    "holidays",
    "pyserial",
    "pygrep",
    "python-rtmidi==1.5.8",
    "paho-mqtt>=1.6.0",
    "setproctitle",
    "psutil",
    "netifaces",
    "JACK-Client",
    "sf2utils",
    # Older is not compatible with new numpy,
    "scipy>=1.11.0",
    # TODO is this line really needed? We don't use it directly
    # Maybe just removing addr was enough?
    "attrs>=23.2.0",
    "pydantic>=2.7.2",
    "types-jsonschema",
    "stamina>=24.2.0",
    "stream-zip>=0.0.83",
    "argon2-cffi",
    "msgpack-types",
    "niquests>=3.15.1",
    "quart>=0.20.0",
    "hypercorn>=0.18.0",
    "structlog>=24.4.0",
    "rich",
    "starlette>=0.37.2",
    "ephem>=4.2.0",
    "sherpa-onnx==1.12.17",
    "sherpa-onnx-core",
    "soundfile>=0.13.1",
    "textual-image"
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
wheel-exclude = ["*.dev.excalidraw.svg", "**/.ruff_cache"]
module-root=""
module-name=["kaithem", "kaithem_cli", "kaithem_scripts"]

[tool.uv]
required-environments=[
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    ]


[project.scripts]
"kaithem" = "kaithem:__main__"
"kaithem-cli" = "kaithem_cli.cli:main"
"kaithem-scripts" = "kaithem_scripts.makefile_runner:main"
"kaithem-pi-boot-cfg" = "kaithem_scripts.pi_boot_cfg:main"

"kaithem._jackmanager_server" = "icemedia.jack_client_subprocess:main"
"kaithem._iceflow_server" = "icemedia.iceflow_server:main"


# Duplicate here so we can use uv to test in specific environments
[dependency-groups]
dev = [
    "kaithem-plugin-datasette",
    "pytest-cov >=5.0.0",
    "pytest-asyncio >=0.23.7",
    "time-machine >=2.0.0",
    "coverage >=7.2.7",
    "datasette>=1.0a19",
    "sphinx-pyproject>=0.3.0",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.1",
    "sphinx-markdown-builder>=0.6.8",
]


test = ["pytest-cov >=5.0.0", "pytest-asyncio >=0.23.7", "time-machine >=2.0.0"]


[tool.ruff]
line-length = 80
target-version = "py311"


[tool.coverage.run]
# omit the deprecated old file and system gstreamer
omit = ["*/thirdparty/*", "*/selftest/*", "/usr/lib/**"]
sigterm = true

[tool.coverage.report]

exclude_also = ["if TYPE_CHECKING"]


[tool.liccheck]
authorized_licenses = [
    "BSD",
    "new BSD",
    "BSD license",
    "simplified BSD",
    "Apache",
    "Apache 2.0",
    "Apache software license",
    "Apache Software",
    "gnu LGPL",
    "LGPL with exceptions or zpl",
    "# https://opensource.stackexchange.com/questions/10996/is-the-edl-v1-0-gpl-compatible",
    "Eclipse Public License v2.0 / Eclipse Distribution License v1.0",
    "Historical Permission Notice and Disclaimer (HPND)",
    "GNU Lesser General Public License v3 (LGPLv3)",
    "LGPL-2.1-or-later",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "GNU Lesser General Public License v3 or later (LGPLv3+)",
    "ISC license (ISCL)",
    "MIT",
    "MIT license",
    "python software foundation license",
    "GNU General Public License v2 or later (GPLv2+)",
    "Public Domain",
    "Zope Public",
    "GNU Lesser General Public License v2 (LGPLv2)",
    "GNU Library or Lesser General Public License (LGPL)",
    "3-Clause BSD",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "Python Software Foundation",
    "PSF-2.0",
    "Apache-2.0",
    "Apache License 2.0",
    "Apache License, Version 2.0",
    "Apache licensed, as found in the LICENSE file",
    "MIT-CMU",
    "EPL-2.0 OR BSD-3-Clause",
    "BSD-3-Clause",
    "BSD-2-Clause",
    "GNU General Public License v3 or later (GPLv3+)",
    "The Unlicense (Unlicense)",
    "                                 Apache"
]

[tool.liccheck.authorized_packages]
# LGPL-2.1 license
pyFluidSynth = ">0.0.1"

# Appears to be trivial and sub-kb
pam = ">0.0.1"

# Apache 2.0
chacha20poly1305-reuseable = ">0.0.1"

# PSF-2.0
aiohappyeyeballs = ">0.0.1"

# Apache Software License 2.0
async-interrupt = ">0.0.1"

# First party and should be permissive, not sure why they show as Other/Proprietary
icemedia = ">=0.2.0"
scullery = ">=0.4.0"

kaithem-plugin-datasette = ">0.0.1"

# Pyproject.toml listed as GPL-3.0-or-later
aiostream = ">0.0.1"


[tool.pytest.ini_options]
asyncio_mode = "auto"
